[package]
name = "clout"
version = "0.2.0"
authors = ["Stephen Lee <sphen.lee@gmail.com>"]
edition = "2018"

description = "commandline output library"
license = "MIT"
repository = "https://github.com/sphenlee/clout"
documentation = "https://docs.rs/clout"
readme = "README.md"

keywords = ["cli", "output", "logging"]
categories = ["command-line-interface"]

[dependencies]
atty = "^0.2"
termcolor = "^1.0"
lazy_static = "^1.3"
